# wicked-expressions

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  template.yml
docs/: home.md  technical.md
docs/detailed/: runtime_variables.md
docs/new_features/: comparing_expressions.md  if_exists.md  low_level_operations.md  runtime_variables.md  this.md
docs/simple/: auto_objectives.md  check_is_expression.md  comparing_expressions.md  dummy_objective.md  get_and_store_methods.md  getting_started.md  if_exists.md  this_expression.md
docs/technical/: data.md  datastash.md  runtime_variables.md  scoreboard.md  this.md
docs/technical_quirks/: scoreboard.md
docs/tutorial/: basic_tutorial.md  check_is_expression.md  datastash.md  getting_started.md  if_exists.md  installation.md  runtime_variables.md  scoreboard.md  this.md
examples/basic/: beet.yml
examples/basic1/: beet.yaml
examples/combo_init_function/: beet.yaml
examples/combo_init_function_call/: beet.yaml
examples/combo_node_methods/: beet.yaml
examples/contrib_commands/: beet.yaml
examples/operation_complex/: beet.yaml
examples/operation_min_max/: beet.yaml
examples/operation_nbt_complex/: beet.yaml
examples/operation_nbt_scale/: beet.yaml
examples/operation_nbt_type/: beet.yaml
examples/source_component/: beet.yaml
examples/source_inheritance/: beet.yaml
examples/source_nbt/: beet.yaml
examples/we_comparison_data_oper_literal/: beet.yml
examples/we_namespace_with_dots/: beet.yml
examples/we_var_static_debug/: beet.yml
fixme/: __init__.py
tests/snapshots/: api.bolt  examples__build_advanced1__0.pack.md  examples__build_basic1__0.pack.md  examples__build_basic2__0.pack.md  examples__build_basic3__0.pack.md  examples__build_basic__0.pack.md  examples__build_combo_init_function__0.pack.md  examples__build_combo_init_function_call__0.pack.md  examples__build_combo_node_methods__0.pack.md  examples__build_combo_smithed_damage__0.pack.md  examples__build_contrib_commands__0.pack.md  examples__build_docs_test__0.pack.md  examples__build_operation_basics__0.pack.md  examples__build_operation_complex__0.pack.md  examples__build_operation_min_max__0.pack.md  examples__build_operation_nbt_basics__0.pack.md  examples__build_operation_nbt_complex__0.pack.md  examples__build_operation_nbt_scale__0.pack.md  examples__build_operation_nbt_type__0.pack.md  examples__build_source_component__0.pack.md  examples__build_source_inheritance__0.pack.md  examples__build_source_nbt__0.pack.md  examples__build_we_advanced1__0.pack.md  examples__build_we_basic1__0.pack.md  examples__build_we_basic2__0.pack.md  examples__build_we_basic3__0.pack.md  examples__build_we_basic4__0.pack.md  examples__build_we_basic5__0.pack.md  examples__build_we_cascaded_operations_data__0.pack.md  examples__build_we_cascaded_operations_score__0.pack.md  examples__build_we_cast__0.pack.md  examples__build_we_comparison__0.pack.md  examples__build_we_comparison_assignment_data__0.pack.md  examples__build_we_comparison_assignment_score__0.pack.md  examples__build_we_comparison_autonest2__0.pack.md  examples__build_we_comparison_autonest__0.pack.md  examples__build_we_comparison_data_oper_data__0.pack.md  examples__build_we_comparison_data_oper_literal__0.pack.md  examples__build_we_comparison_data_oper_score__0.pack.md  examples__build_we_comparison_float__0.pack.md  (+33 more)
wicked_expressions/: __init__.py
wicked_expressions/modules/: api.bolt  basic.bolt  comparison.bolt  config.bolt  copy_args.bolt  datastash.bolt  internal_api.bolt  list.bolt  loader.bolt  loader_components.bolt  loop.bolt  low_level.bolt  var.bolt  (+11 more)
(+75 files in other folders)
