[tool.poetry]
name = "wicked_expressions"
version = "1.4.0"
description = "Extension of bolt-expressions written in Bolt."
authors = ["Yeti <arcticyeti1@gmail.com>"]
license = "MIT"

homepage = "https://github.com/reapermc/wicked-expressions"
readme = "README.md"

keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
]

include = ["wicked_expressions/py.typed"]

[tool.poetry.dependencies]
python = "^3.12"
beet = ">=0.89.1"
mecha = ">=0.73.0"
bolt = ">=0.36.0"
bolt-expressions = ">=0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
pytest-insta = ">=0.1.11,<0.3.0"
lectern = ">=0.25.0"
python-semantic-release = "^7.32.1"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "wicked_expressions/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = true
upload_to_repository = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
